# cmake-cocoapods-example

./: .gitignore  CMakeLists.txt  Gemfile  Podfile  README.md  ios.sh  xcode-project-no-cocoapods.sh  xcode-project.sh
libbar/: CMakeLists.txt  bar.mm
libfoo/: foo.cpp
